# ORCA

./: ARCHITECTURE_README.md  IMPLEMENTATION_SUMMARY.md  Pipfile  README.md  README_BINARY_EVALUATION.md  README_CLI.md  README_LLM_BACKDOOR_EVALUATION.md  README_STREAMLIT_FRONTEND.md  binsleuth_robustness_evaluation_report.json  cosine_similarity_analysis_report.json  orca_cli.py  requirements_frontend.txt  requirements_llm_evaluation.txt  run_evaluation_fast.py  run_streamlit_frontend.py  streamlit_frontend.py
orca/: __init__.py  cli.py  pyproject.toml  requirements.txt  run_analysis.sh  run_enhanced_cli.py  run_simple_analysis.sh  tres.json
orca/core/: __init__.py  batch.py  config.py  embeddings.py  hitl.py  models.py  orchestrator.py  sandbox.py  state.py
orca/core/llm/: __init__.py  provider.py  rate_limiter.py
orca/core/re_backends/: __init__.py  base.py  binja_backend.py  ghidra_backend.py  selector.py
orca/core/reporting/: __init__.py  engine.py
orca/correlation/: __init__.py  engine.py
orca/domains/: __init__.py
orca/domains/binary/: __init__.py  function_filter.py  string_analysis.py  workflow.py
orca/domains/network/: __init__.py  ja4_fingerprinter.py  qlog_parser.py  workflow.py
orca/prompts/binary/: capabilities.md
orca/prompts/malware/: assessment.md
orca/prompts/network/: quic_analysis.md
orca/samples/: bof  nslookup
orca/src/cmd/: Dockerfile  README_api_analysis.md  README_api_crossrefs.md  README_binary_analyzer.md  README_chatbot.md  README_smart_string_analysis.md  agents-dynamic.py  agents.py  ai_intergration.py  api_analysis_agent.py  api_clustering.py  api_crossrefs.py  api_crossrefs_fix_summary.md  api_reference_analyzer.py  binary.py  binary_analyzer.py  binary_summary.py  bns.py  chatbot.py  check_result.py  check_sample.py  code_reference_analyzer.py  concept_test_interrupt.py  config.py  debug_test.py  (+34 more)
orca/tests/: __init__.py  test_core.py  test_domains.py  test_models.py
(+3 files in other folders)
