[project]
name = "orca"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "lief (>=0.16.4,<0.17.0)",
    "pyelftools (>=0.32,<0.33)",
    "angr (>=9.2.148,<10.0.0)",
    "langchain (>=0.3.22,<0.4.0)",
    "langchain-ollama (>=0.3.0,<0.4.0)",
    "langchain-openai (>=0.3.11,<0.4.0)",
    "capstone (==5.0.3)",
    "django (>=5.2,<6.0)",
    "psutil (>=7.0.0,<8.0.0)",
    "docker (>=7.1.0,<8.0.0)",
    "litellm (>=1.67.4.post1,<2.0.0)",
    "langgraph-supervisor (>=0.0.23,<0.0.24)",
    "langgraph-swarm (>=0.0.11,<0.0.12)",
    "langmem (>=0.0.26,<0.0.27)",
    "langgraph (>=0.4.5,<0.5.0)",
    "tldextract (>=5.3.0,<6.0.0)",
    "validators (>=0.35.0,<0.36.0)",
    "streamlit (>=1.45.1,<2.0.0)",
    "plotly (>=6.1.2,<7.0.0)",
    "grandalf (>=0.8,<0.9)"
]

[tool.poetry]
packages = [{include = "orca", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
